# Orion

./: .gitignore  ARCHITECTURE_DECISIONS.md  CMakeLists.txt  CONTRIBUTING.md  Cargo.toml  FINAL_SUMMARY.md  GITHUB_SETUP_INSTRUCTIONS.md  GITHUB_UPLOAD_INSTRUCTIONS.md  LICENSE  PROJECT_STATUS.md  README.md  README_UPDATE_SUMMARY.md  TODO-DRIVERS-SERVERS.md  WIKI-README.md  optimize.py  tatus  test.py  upload-to-github.sh
dev/tools/orion-ps/: Cargo.toml
dev/tools/orion-ps/src/: main.rs
dev/tools/orion-trace/: Cargo.toml
dev/tools/orion-trace/src/: main.rs
drivers/block/: Cargo.toml  README_AHCI.md  README_COMPRESSION.md  README_DEDUPLICATION.md  README_ENCRYPTION.md  README_ISCSI.md  README_LVM.md  README_NBD.md  README_NVME.md  README_NVME_ADVANCED.md  README_RAID.md  README_SATA.md  README_SCSI.md  README_VIRTIO_BLK.md  README_VIRTIO_SCSI.md
drivers/block/src/: ahci.rs  compression.rs  encryption.rs  lvm.rs  nbd.rs  nvme.rs  raid.rs  scsi.rs  virtio_blk.rs  virtio_scsi.rs
drivers/gpu/: Cargo.toml
drivers/gpu/src/: framebuffer.rs  virtio_gpu.rs
drivers/net/: Cargo.toml
drivers/net/src/: e1000.rs  rtl8139.rs  virtio_net.rs
drivers/usb/: Cargo.toml
drivers/usb/src/: usb_hid.rs  usb_storage.rs
kernel/: CMakeLists.txt  README.md
kernel/arch/: CMakeLists.txt
kernel/arch/aarch64/: CMakeLists.txt  arch.c  arch.h  arch_asm.S  boot.S  config.h  entry.c  interrupt_handlers.c  interrupts.c  linker.ld  syscall_entry.S  test_aarch64.c  timers.c
kernel/arch/armv7l/: CMakeLists.txt  arch.c  arch.h  arch_asm.S  boot.S  config.h  entry.c  entry_asm.S  interrupt_handlers.c  interrupts.c  linker.ld  syscall_entry.S  test_armv7l.c  timers.c
kernel/arch/hal/: ARCHITECTURE_COMPLETION_STATUS.md  CMakeLists.txt  README.md  README_MULTI_ARCHITECTURE.md  hal_integration.c  hal_integration.h  hal_rust_bridge.h  orion_hal.h  test_hal.c
kernel/arch/hal/aarch64/: README_RASPBERRY_PI.md  hal_aarch64.c  hal_aarch64.h
kernel/arch/hal/armv7l/: CMakeLists.txt  hal_armv7l.c  hal_armv7l.h  hal_armv7l_common.h
kernel/arch/hal/common/: hal_common.c  hal_common.h  limits.h
kernel/arch/hal/loongarch/: hal_loongarch.c  hal_loongarch.h
kernel/arch/hal/mips/: CMakeLists.txt  hal_mips.c  hal_mips.h  hal_mips_common.h  test_hal_mips.c
kernel/arch/hal/powerpc/: CMakeLists.txt  README.md  README_POWER.md  VERIFICATION.md  hal_powerpc.c  hal_powerpc.h  hal_powerpc_common.h  integration_test.c  test_hal_powerpc.c
kernel/arch/hal/riscv64/: hal_riscv64.c  hal_riscv64.h
kernel/arch/hal/s390x/: CMakeLists.txt  README.md  README_S390X.md  VERIFICATION.md  hal_s390x.c  hal_s390x.h  hal_s390x_common.h  test_hal_s390x.c
kernel/arch/hal/x86_64/: hal_x86_64.c  hal_x86_64.h
kernel/arch/loongarch/: CMakeLists.txt  README.md  arch.c  arch.h  arch_advanced.c  arch_asm.S  boot.S  config.h  entry.c  interrupt_handlers.c  interrupts.c  linker.ld  syscall_entry.S  test_loongarch.c  timers.c
kernel/arch/mips/: CMakeLists.txt  arch.c  arch.h  arch_asm.S  boot.S  cache.c  config.h  cpu.c  devices.c  diagnostics.c  drivers.c  entry.c  error.c  extensions.c  features.c  interrupt_handlers.c  interrupt_stubs.c  interrupts.c  linker.ld  mmu.c  performance.c  security.c  stubs.c  syscall_entry.S  system.c  test_mips.c  timers.c  utils.c  validation.c
kernel/arch/mips/include/: mips_common.h
kernel/arch/powerpc/: CMakeLists.txt  README.md  arch.c  arch.h  arch_advanced.c  boot_config.h  cache.c  config.h  devices.c  entry.c  entry_asm.S  exceptions.c  interrupts.c  mmu.c  performance.c  power.ld  security.c  test_power.c  timer.c  vectors.c  virtualization.c
kernel/arch/riscv64/: CMakeLists.txt  README.md  arch.c  arch.h  arch_advanced.c  boot.S  cache.c  common.h  config.h  cpu.c  devices.c  entry.c  error.c  exceptions.c  extensions.c  interrupt_handlers.c  interrupt_stubs.c  interrupts.c  linker.ld  mmu.c  numa.c  performance.c  pmu.c  power.c  security.c  stubs.c  syscall_entry.S  test_riscv64.c  timers.c
kernel/arch/s390x/: CMakeLists.txt  README.md  VERIFICATION.md  arch.c  arch.h  config.h  test_s390x.c
kernel/arch/x86_64/: arch_advanced.c  arch_asm.S  boot.S  config.h  cpu.c  entry.c  interrupt_handlers.c  interrupt_stubs.c  interrupts.c  linker.ld  mmu.c  msvc_stubs.c  stubs.c  syscall_entry.S  test_x86_64.c  timers.c
kernel/arch/x86_64/include/: arch.h
kernel/core/: CMakeLists.txt  boot.c  capabilities.c  init_process.c  ipc.c  klog.c  klog_test.c  main.c  panic.c  process.c  scheduler.c  shell.c  stubs.c  syscalls.c  thread.c
kernel/core/capabilities/: capabilities.h
kernel/core/ipc/: ipc.c
kernel/core/memory/: heap.c  pmm.c  slab.c
kernel/core/process_management/: process.c  process.h  servers.c  servers.h  thread.h
kernel/core/scheduler/: scheduler.c  scheduler_adaptive.h
kernel/core/syscalls/: syscalls.c  syscalls.h
kernel/core/utilities/: panic.c  string.c
kernel/fs/: ramfs.c  vfs.c
kernel/include/orion/: boot.h  capabilities.h  console.h  constants.h  forward_decls.h  ipc.h  kernel.h  klog.h  limits.h  logging.h  mm.h  process.h  scheduler.h  security.h  shell.h  spinlock.h  string.h  structures.h  syscalls.h  thread.h  time.h  types.h  vfs.h
kernel/lib/: string.c
kernel/mm/: heap.c  pmm.c  slab.c  vmm.c
lib/orion-cap/: Cargo.toml
lib/orion-cap/src/: lib.rs
lib/orion-driver/: Cargo.toml
lib/orion-driver/src/: device.rs  error.rs  ipc.rs  lib.rs  mmio.rs  prelude.rs  traits.rs  types.rs
lib/orion-ipc/: Cargo.toml
lib/orion-ipc/src/: lib.rs
lib/orion-storage/: Cargo.toml  README.md
lib/orion-storage/src/: cache.rs  core.rs  lib.rs  optimization.rs
servers/fs/: Cargo.toml
servers/fs/src/: main.rs  vfs.rs
servers/io/: Cargo.toml
servers/io/src/: main.rs
servers/net/: Cargo.toml
servers/net/src/: main.rs
servers/posix/: Cargo.toml
servers/posix/src/: main.rs
tools/: CMakeLists.txt  hexdump.c  klog.c  optimize.py  orion-build.sh  test.py
tools/orion-ps/: Cargo.toml
tools/orion-ps/src/: main.rs
tools/orion-top/: Cargo.toml
tools/orion-top/src/: main.rs
tools/orion-trace/: Cargo.toml
tools/orion-trace/src/: main.rs
(+128 files in other folders)
