# Orion tools and utilities

# Note: Most tools are implemented in Rust via Cargo
# This CMakeLists.txt only handles build system integration

# Rust tools are built via Cargo in their respective directories:
# - orion-ps: Process listing tool
# - orion-top: System monitoring tool  
# - orion-trace: System call tracing tool

# Installation placeholder for future C tools
# install(TARGETS 
#     DESTINATION bin
#     COMPONENT tools
# )
