[package]
name = "orion-cap"
version = "1.0.0"
edition = "2021"
authors = ["Jeremy Noverraz <jeremy@orion-os.dev>"]
description = "Capability system library for Orion OS"
license = "MIT"
keywords = ["orion", "capability", "security"]
categories = ["no-std", "embedded", "os"]

[dependencies]

[lib]
name = "orion_cap"
path = "src/lib.rs"
