[package]
name = "orion-driver"
version = "0.1.0"
edition = "2021"
authors = ["Jeremy Noverraz <jeremy@orion-os.dev>"]
description = "Rust driver framework for Orion OS userland drivers"
license = "MIT"
keywords = ["orion", "driver", "kernel", "operating-system", "rust"]
categories = ["no-std", "embedded", "os"]

[dependencies]
bitflags = "2.0"
spin = "0.9"

[lib]
name = "orion_driver"
crate-type = ["rlib"]

[features]
default = ["block", "network"]
# Features for different driver types
block = []
network = []
usb = []
gpu = []
# Advanced features
dma = []
msi = []
power_management = []
