[package]
name = "orion-driver"
version = "1.0.0"
edition = "2021"
authors = ["Jeremy Noverraz <jeremy@orion-os.dev>"]
description = "Common driver framework for Orion OS"
license = "MIT"
keywords = ["orion", "driver", "framework", "kernel"]
categories = ["no-std", "embedded", "os"]

[dependencies]
bitflags = "2.0"
spin = "0.9"

[lib]
name = "orion_driver"
path = "src/lib.rs"

[features]
default = []
std = []
no_std = []
