[package]
name = "orion-storage"
version = "1.0.0"
edition = "2021"
authors = ["Jeremy Noverraz <jeremy@orion-os.dev>"]
description = "Storage Framework for Orion OS - Unified storage management, caching, and optimization"
license = "MIT"
keywords = ["orion", "storage", "framework", "cache", "optimization", "filesystem"]
categories = ["no-std", "embedded", "os"]

[dependencies]
orion-ipc = { path = "../orion-ipc" }
orion-cap = { path = "../orion-cap" }
orion-driver = { path = "../orion-driver" }
spin = "0.9"
linked_list_allocator = "0.10"

[features]
default = ["compression", "deduplication", "encryption", "caching"]
compression = []
deduplication = []
encryption = []
caching = []
performance-monitoring = []
adaptive-optimization = []
hardware-acceleration = []

[[bin]]
name = "storage-manager"
path = "src/bin/storage_manager.rs"

[[bin]]
name = "cache-manager"
path = "src/bin/cache_manager.rs"

[[bin]]
name = "optimization-engine"
path = "src/bin/optimization_engine.rs"
