[package]
name = "orion-posix-server"
version = "1.0.0"
edition = "2021"
authors = ["Jeremy Noverraz <jeremy@orion-os.dev>"]
description = "POSIX compatibility server for Orion OS"
license = "MIT"
keywords = ["orion", "server", "posix", "compatibility"]
categories = ["no-std", "embedded", "os"]

[dependencies]
orion-ipc = { path = "../../lib/orion-ipc" }
orion-cap = { path = "../../lib/orion-cap" }

[[bin]]
name = "posix-server"
path = "src/main.rs"
