[package]
name = "orion-trace"
version = "1.0.0"
edition = "2021"
authors = ["Jeremy Noverraz <jeremy@orion-os.dev>"]
description = "System tracing tool for Orion OS"
license = "MIT"
keywords = ["orion", "tool", "tracing", "debugging"]
categories = ["no-std", "embedded", "os"]

[dependencies]

[[bin]]
name = "orion-trace"
path = "src/main.rs"
